# python_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup-vscode.sh
.github/workflows/: ci.yml
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_main.py
